<resources>
    <string name="app_name">Technoveent R&amp;D</string>
    <string name="register_text">Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="select_gender">Select Gender</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="checkbox">I agree to the term of use and privacy policy</string>
    <string name="register">Register</string>
    <string name="new_welcome_msg">Welcome to AutoGenics </string>
    <string name="verify_your_nphone_number">Verify your\nPhone number</string>
    <string name="we_have_sent_you_an_sms_with_a_code_to_number">We will send you an SMS with a code to your number</string>
    <string name="_91_8586023109">+91 xxxxxxxxxx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_msg">Welcome, </string>
    <string name="we_offer_fresh_and_high_nquality_groceries">We offer fresh and high\nquality groceries.</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_nsadipscing_elitr_sed_diam_nonumy">Lorem ipsum dolor sit amet, consetetur\nsadipscing elitr, sed diam nonumy</string>
    <string name="next">NEXT</string>
    <string name="we_deliver_it_to_you_directly_nfrom_the_farms">We deliver it to you directly\nfrom the farms</string>
    <string name="try_us_today_with_nsatisfaction">Try us today with\nsatisfaction.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_grocart">Welcome to Grocart</string>
    <string name="let_s_first_check_that_we_deliver_to_nyour_address">Let’s first check that we deliver to\nyour address</string>
    <string name="choose_location">Choose Location</string>
    <string name="choose_your_location_and_nstart_shopping">Choose your location and\nstart shopping</string>
    <string name="select_it_manually">Select it Manually</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="please_enable_push_notifications_nto_get_more_offers_updates"><![CDATA[Please enable push notifications.\nTo get more offers & Updates]]></string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="forget_password">Forget Password</string>
    <string name="we_will_send_an_sms_with_a_confirmation_ncode_to_this_number">
        We will send an SMS with a confirmation\ncode to this number</string>
    <string name="phone_number">Phone Number</string>
    <string name="_9638527410">9638527410</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="txt_xxxxxxx">XXXXXXX</string>
    <string name="password">Password</string>
    <string name="change">CHANGE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_account">Verify Account</string>
    <string name="please_type_the_vertification_code_send">Please type the vertification code send</string>
    <string name="to">to</string>
    <string name="_00_42s">00:42s</string>
    <string name="resend_code_in">Resend Code in :</string>
    <string name="_91_99999xxxxx">+91 99999XXXXX</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="create_new_account">Create New Account</string>
    <string name="please_all_details_to_create_new_account">Please all details to create new account</string>
    <string name="name">Name</string>
    <string name="wsdesign">WSDesign</string>
    <string name="email_id">Email ID</string>
    <string name="wsdesign_gmail_com">WSDesign@gmail.com</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_and_condition">
        <font fgcolor="#a2a2a2">By creating an account, you are agreeing\nto our</font>
        <font fgcolor="#2ac17e"><u>Terms and Conditions</u></font>
    </string>
    <string name="glad_to_see_you">Glad to see you!</string>
    <string name="login_to_access_to_grocart">Login to access to Grocart</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="txt_sign_in">
        <font fgcolor="#000000">Don’t have an account ?</font><font fgcolor="#2ac17e">Sign Up</font>
    </string>
    <string name="enable_your_location">Enable Your Location</string>
    <string name="please_allow_to_use_your_location_to_nshow_nearby_restaurant_on_the_map">Please allow to use your location to\nshow nearby restaurant on the map.</string>
    <string name="enable_location">Enable Location</string>
    <string name="_987643_nthank_you">#987643\nThank You!</string>
    <string name="your_items_has_been_nplaced_and_is_on_it_s_way_nto_being_processed">Your items has been\nplaced and is on it\'s way\nto being processed</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="back_to_home">Back to HOME</string>
    <string name="oops_norder_failed">Oops!\nOrder Failed</string>
    <string name="something_went_nterribly_wrong">Something went\nterribly wrong,</string>
    <string name="please_try_again">Please try again</string>
    <string name="oops_order_failed">Oops! Order Failed</string>
    <string name="something_went_terribly_wrong">Something went terribly wrong,</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_items_has_been_placed_and_nis_on_it_s_way_to_being_processed">Your items has been placed and\nis on it\'s way to being processed</string>
    <string name="order_number">Order Number</string>
    <string name="_9876512390">#9876512390</string>
    <string name="date">Date</string>
    <string name="_11_may_09_10_am_2020">11 May, 09:10 am 2020</string>
    <string name="choose_languages">Choose Languages</string>
    <string name="please_select_your_preferred_language_nto_facililate_communication">Please select your preferred language\nto facililate communication</string>
    <string name="english">English</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="wsdesign_in">WSDesign.in</string>
    <string name="my_orders">My Bookings</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="coupons">Coupons</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="manage_card">Manage Card</string>
    <string name="setting">Setting</string>
    <string name="logout">LOGOUT</string>
    <string name="no_items_in_your_cart">No items in your cart</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="your_favourite_items_are_njust_a_click_away">Your favourite items are\njust a click away</string>
    <string name="no_item_in_your_nfavourites">No Item in your\nfavourites</string>
    <string name="total_4">Total 4</string>
    <string name="_1_ltr">1 Ltr</string>
    <string name="dummy_product_title_add_will_nbe_here">Dummy Product title add will\nbe here</string>
    <string name="move_to_cart">MOVE TO CART</string>
    <string name="_15"><strike>$15</strike></string>
    <string name="_12">$12</string>
    <string name="serach_for_products">Serach for products</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear_all">Clear all</string>
    <string name="apple">Apple</string>
    <string name="new_york_city">New York City</string>
    <string name="your_location">Your location</string>
    <string name="search_for_products">Search for products</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="ugh_something_not_right_nwith_your_internet">Ugh! Something not right\nwith your internet</string>
    <string name="try_agian">Try Agian</string>
    <string name="best_selling_items">Best Selling Items</string>
    <string name="see_all">See All</string>
    <string name="fruits">Fruits</string>
    <string name="_70">70%</string>
    <string name="best_deal_on_nvegetable_s">Best Deal on\nVegetable\'s</string>
    <string name="save">SAVE</string>
    <string name="shop_now">Shop NOW</string>
    <string name="coriander_product_ntitle_will_be_here">Coriander Product\ntitle will be here</string>
    <string name="_1_kg">1 kg</string>
    <string name="add">ADD</string>
    <string name="fresh">FRESH</string>
    <string name="vegetable">VEGETABLE</string>
    <string name="exclusive">Exclusive</string>
    <string name="_50_off">50% OFF</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="using_gps">Using GPS</string>
    <string name="choose_your_location">Choose your Location</string>
    <string name="vadodara">vadodara</string>
    <string name="no_address_add_yet">No address add yet</string>
    <string name="please_add_address_and_come_back">Please add address and come back</string>
    <string name="add_new_address">Add NEW ADDRESS</string>
    <string name="lowest">Lowest</string>
    <string name="best">Best</string>
    <string name="highest">Highest</string>
    <string name="newest">Newest</string>
    <string name="sort_by">Sort By</string>
    <string name="price">Price</string>
    <string name="categories">Categories</string>
    <string name="apply">APPLY</string>
    <string name="frozen_products">Frozen Products</string>
    <string name="_20_off">20% OFF</string>
    <string name="dummy_product_title_nadd_will_be_here">Dummy Product title\nadd will be here</string>
    <string name="product_deatils">Product Deatils</string>
    <string name="designed_to_work_in_high_water_level_40_liters_of_top_load_washing_machines_dissolves_completely_leaving_no_residue_on_your_clothes_on_in_the_machine_comes_with_an_advanced_technology_that_gives_you_hand_wash_like_clean_in_machines_itself">Designed to work in high water level (40 liters) of top load washing machines. Dissolves completely leaving no residue on your clothes on in the machine. Comes with an advanced technology that gives you hand wash like clean in machines itself.</string>
    <string name="_2">2</string>
    <string name="buy_12">Buy $12</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="gro50get">gro50get</string>
    <string name="_05">$05</string>
    <string name="_06">- $06</string>
    <string name="discount">Discount</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="total_price">Total Price</string>
    <string name="_24">$24</string>
    <string name="grand_total">Grand Total</string>
    <string name="_23">$23</string>
    <string name="checkout">CheckOUT</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="available_coupons">Available Coupons</string>
    <string name="get_rs_50_off">Get Rs. 50 Off</string>
    <string name="grocy50">GROCY50</string>
    <string name="get_rs_300_off_on_purchase_of_rs_600_and_above">Get Rs 300 off on purchase of Rs 600 and above</string>
    <string name="apply_coupon">APPLY COUPON</string>
    <string name="akshay_syal">Akshay Syal</string>
    <string name="full_name">Full Name *</string>
    <string name="pincode">Pincode *</string>
    <string name="code_desh">-------</string>
    <string name="confirm_passwprd">Confirm Password <font color='#FF0000'>*</font></string>
</resources>