<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            >
            <LinearLayout
                android:focusable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Credentials"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    >
                </TextView>


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/mobileNoTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"

                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/mobileNoEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"

                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:passwordToggleEnabled="true"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/passwordEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"



                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_passwprd"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:passwordToggleEnabled="true"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textWebPassword"


                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>















            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:focusable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Customer Details"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    >
                </TextView>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTextInputLayout"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"

                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:errorEnabled="true"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/membernameEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"

                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"


                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />


                </com.google.android.material.textfield.TextInputLayout>






                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:errorEnabled="true"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textAutoComplete"

                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addressTextInputLayout"

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    app:boxStrokeColor="@color/divider"
                    app:boxStrokeWidth="1dp"
                    android:layout_marginTop="10dp"
                    app:errorTextColor="@color/error"
                    android:textColorHint="@color/secondaryText"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:errorEnabled="true"
                    app:boxCornerRadiusTopStart="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressEdittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textAutoComplete"

                        android:textColor="@color/primaryText"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>







        </androidx.cardview.widget.CardView>





        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:focusable="true"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Documents Upload"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    >
                </TextView>












                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="4"
                    android:layout_marginTop="2dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Aadhar Card"
                        android:layout_gravity="center"
                        >
                    </TextView>

                    <Button
                        android:id="@+id/passportPhotoBrowseButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:layout_gravity="center"
                        android:text="Browse"
                        android:textSize="12sp"
                        >

                    </Button>
                    <ImageView
                        android:id="@+id/passportPhotoImageview"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/load_image"
                        android:scaleType="fitCenter"
                        >

                    </ImageView>

                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:weightSum="4"
                    android:layout_marginTop="2dp"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Electricity Bill"
                        android:layout_gravity="center"
                        >
                    </TextView>
                    <Button
                        android:id="@+id/pancardBrowseButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:text="Browse"
                        android:textSize="12sp"
                        >

                    </Button>


                    <ImageView
                        android:id="@+id/pancardImageView"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/load_image"
                        android:scaleType="fitCenter"
                        >

                    </ImageView>

                </LinearLayout>








       </LinearLayout>










        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="180dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="40dp"
            android:text="Done"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="14sp"
            app:rippleColor="@color/colorPrimaryRipple"
            app:cornerRadius="20dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>


